fixed overflow and margin on Home page

--- a/src/style.css
+++ b/src/style.css
@@ -15,14 +15,14 @@
 
 body {
 	margin: 0;
-	height: 100vh;
-	overflow: hidden;
+	
 }
 
 #app {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	height: 100vh;
 }
 
 header {
@@ -51,21 +51,15 @@ header a:hover {
 
 main {
 	flex: auto;
+	overflow-x: hidden;
 	display: flex;
 	align-items: center;
-	max-width: 1280px;
 	margin: 0 auto;
 	text-align: center;
 	flex-direction: column;
-	justify-content: space-evenly;
 	width: 100%;
 }
 
-@media (max-width: 639px) {
-	main {
-		margin: 2rem;
-	}
-}
 
 @media (prefers-color-scheme: dark) {
 	:root {
